--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Générateur d'images Waifu utilisant l'API waifu.im">
-    <title>Waifu Gallery</title>
+    <meta name="description" content="Galerie Neko aléatoire avec l'API nekos.best">
+    <title>Neko Paradise</title>
     <style>
         :root {
-            --primary: #00e5ff;
-            --secondary: #00bcd4;
-            --accent: #ff00ff;
-            --background: #1a1a1a;
-            --text: #e0e0e0;
+            --primary: #c678dd;
+            --secondary: #6c4298;
+            --accent: #ff79c6;
+            --background: #282a36;
+            --text: #f8f8f2;
         }
 
         * {
@@ -40,7 +40,7 @@
             color: var(--primary);
             font-size: 2.5rem;
             margin-bottom: 2rem;
-            text-shadow: 0 0 10px rgba(0, 229, 255, 0.3);
+            text-shadow: 0 0 10px rgba(198, 120, 221, 0.3);
         }
 
         .gallery {
@@ -56,7 +56,7 @@
             background: rgba(255, 255, 255, 0.05);
         }
 
-        #waifu-image {
+        #neko-image {
             width: 100%;
             height: auto;
             max-width: 500px;
@@ -65,10 +65,10 @@
             opacity: 0;
             transition: all 0.5s ease;
             border-radius: 1rem;
-            box-shadow: 0 0 20px rgba(0, 229, 255, 0.3);
+            box-shadow: 0 0 20px rgba(198, 120, 221, 0.3);
         }
 
-        #waifu-image.loaded {
+        #neko-image.loaded {
             opacity: 1;
         }
 
@@ -79,7 +79,7 @@
             transform: translate(-50%, -50%);
             width: 50px;
             height: 50px;
-            border: 4px solid rgba(0, 229, 255, 0.1);
+            border: 4px solid rgba(198, 120, 221, 0.1);
             border-left-color: var(--primary);
             border-radius: 50%;
             animation: spin 1s linear infinite;
@@ -116,7 +116,7 @@
 
         button:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(0, 229, 255, 0.4);
+            box-shadow: 0 5px 15px rgba(198, 120, 221, 0.4);
         }
 
         button:active {
@@ -128,7 +128,7 @@
             cursor: not-allowed;
         }
 
-        .image-info {
+        .artist-info {
             background: rgba(255, 255, 255, 0.1);
             padding: 1rem;
             border-radius: 1rem;
@@ -136,7 +136,7 @@
             display: none;
         }
 
-        .image-info.visible {
+        .artist-info.visible {
             display: block;
         }
 
@@ -158,71 +158,65 @@
 </head>
 <body>
     <div class="container">
-        <h1>Waifu Gallery</h1>
+        <h1>✨ Neko Paradise ✨</h1>
         <div class="gallery">
             <div class="image-container">
                 <div class="loading-spinner"></div>
-                <img id="waifu-image" src="" alt="Waifu Image">
+                <img id="neko-image" src="" alt="Neko Image">
             </div>
-            <div class="image-info">
-                <p id="image-source"></p>
-                <p id="image-tags"></p>
+            <div class="artist-info">
+                <p id="artist-name"></p>
             </div>
         </div>
         <div class="controls">
-            <button onclick="getWaifuImage()" id="generate-btn">
-                <span class="button-text">Nouvelle Waifu</span>
+            <button onclick="getNekoImage()" id="generate-btn">
+                <span>Nouveau Neko</span>
             </button>
             <button onclick="downloadImage()" id="download-btn" disabled>
-                <span class="button-text">Télécharger</span>
+                <span>Télécharger</span>
             </button>
         </div>
     </div>
 
     <script>
-        const waifuImage = document.getElementById('waifu-image');
+        const nekoImage = document.getElementById('neko-image');
         const generateBtn = document.getElementById('generate-btn');
         const downloadBtn = document.getElementById('download-btn');
-        const imageInfo = document.querySelector('.image-info');
-        const imageSource = document.getElementById('image-source');
-        const imageTags = document.getElementById('image-tags');
+        const artistInfo = document.querySelector('.artist-info');
+        const artistName = document.getElementById('artist-name');
         let currentImageUrl = '';
 
-        async function getWaifuImage() {
+        async function getNekoImage() {
             try {
-                // Désactiver le bouton pendant le chargement
                 generateBtn.disabled = true;
                 downloadBtn.disabled = true;
-                waifuImage.classList.remove('loaded');
-                imageInfo.classList.remove('visible');
+                nekoImage.classList.remove('loaded');
+                artistInfo.classList.remove('visible');
 
-                const response = await fetch('https://api.waifu.im/search');
+                const response = await fetch('https://nekos.best/api/v2/neko');
                 const data = await response.json();
-                const imageData = data.images[0];
+                const imageData = data.results[0];
 
-                // Précharger l'image
                 const img = new Image();
                 img.src = imageData.url;
                 
                 img.onload = () => {
                     currentImageUrl = imageData.url;
-                    waifuImage.src = currentImageUrl;
-                    waifuImage.classList.add('loaded');
+                    nekoImage.src = currentImageUrl;
+                    nekoImage.classList.add('loaded');
                     downloadBtn.disabled = false;
                     
-                    // Afficher les informations de l'image
-                    imageSource.textContent = `Source: ${imageData.source || 'Inconnue'}`;
-                    imageTags.textContent = `Tags: ${imageData.tags.map(tag => tag.name).join(', ')}`;
-                    imageInfo.classList.add('visible');
+                    artistName.textContent = `Artiste: ${imageData.artist_name || 'Inconnu'}`;
+                    artistInfo.classList.add('visible');
                 };
 
                 img.onerror = () => {
-                    alert('Erreur lors du chargement de l\'image. Veuillez réessayer.');
+                    alert('Erreur de chargement de l\'image');
                     generateBtn.disabled = false;
                 };
             } catch (error) {
                 console.error('Erreur:', error);
-                alert('Erreur lors de la récupération de l\'image. Veuillez réessayer.');
+                alert('Erreur de connexion à l\'API');
             } finally {
                 generateBtn.disabled = false;
             }
@@ -237,29 +231,27 @@
                 const url = window.URL.createObjectURL(blob);
                 const a = document.createElement('a');
                 a.href = url;
-                a.download = `waifu-${Date.now()}.jpg`;
+                a.download = `neko-${Date.now()}.jpg`;
                 document.body.appendChild(a);
                 a.click();
                 document.body.removeChild(a);
                 window.URL.revokeObjectURL(url);
             } catch (error) {
-                console.error('Erreur lors du téléchargement:', error);
-                alert('Erreur lors du téléchargement de l\'image.');
+                console.error('Erreur de téléchargement:', error);
+                alert('Erreur lors du téléchargement');
             }
         }
 
-        // Gestion des raccourcis clavier
         document.addEventListener('keydown', (e) => {
             if (e.code === 'Space') {
                 e.preventDefault();
-                if (!generateBtn.disabled) getWaifuImage();
+                if (!generateBtn.disabled) getNekoImage();
             } else if (e.code === 'KeyD' && !downloadBtn.disabled) {
                 downloadImage();
             }
         });
 
-        // Charger une image au démarrage
-        window.addEventListener('load', getWaifuImage);
+        window.addEventListener('load', getNekoImage);
     </script>
 </body>
 </html>
