--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<iframe 
-  src="https://voiranime.com" 
-  width="100%"
-  height="800"
-  frameborder="0"
-  sandbox="allow-scripts allow-same-origin"
-  allowfullscreen>
-</iframe>
+<iframe src="https://nebula-executor.xyz/" width="100%" height="600" frameborder="0"></iframe>
