--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-<iframe src="https://nebula-executor.xyz/" width="100%" height="600" frameborder="0"></iframe>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iframe Plein Écran</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://nebula-executor.xyz/"></iframe>
+</body>
+</html>
