--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://deltaexploits.gg" width="100%" height="600px" style="border:none;"></iframe>
+<iframe src="https://voiranime.com" width="100%" height="600px" style="border:none;"></iframe>
