--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://voiranime.com" width="100%" height="600px" style="border:none;"></iframe>
+<iframe src="https://voiranime.com" style="position:fixed; top:0; left:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
