--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<iframe src="https://voiranime.com" style="position:fixed; top:0; left:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;"></iframe>
+<style>
+  body, html {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+  }
+  .iframe-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+  }
+  .iframe-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+</style>
+
+<div class="iframe-container">
+  <iframe src="https://voiranime.com" allowfullscreen></iframe>
+</div>
