--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
-<style>
-  body, html {
-    margin: 0;
-    padding: 0;
-    height: 100%;
-    overflow: hidden;
-  }
-  .iframe-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-  }
-  .iframe-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: none;
-  }
-</style>
-
-<div class="iframe-container">
-  <iframe src="https://voiranime.com" allowfullscreen></iframe>
-</div>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Iframe Plein Écran</title>
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            overflow: hidden; /* Empêche le défilement */
+            height: 100%;
+        }
+        iframe {
+            width: 100%;
+            height: 100vh; /* 100% de la hauteur visible */
+            border: none; /* Supprime la bordure */
+        }
+    </style>
+</head>
+<body>
+    <iframe src="https://atstream.xyz/" allowfullscreen></iframe>
+</body>
+</html>
