--- a/index.html
+++ b/index.html
@@ -18,18 +18,6 @@
       }
     }
 
-    @keyframes float {
-      0% {
-        transform: translateY(0px);
-      }
-      50% {
-        transform: translateY(-10px);
-      }
-      100% {
-        transform: translateY(0px);
-      }
-    }
-
     @keyframes fadeInUp {
       from {
         opacity: 0;
@@ -65,6 +53,24 @@
       }
     }
 
+    @keyframes fadeOut {
+      to {
+        opacity: 0;
+        visibility: hidden;
+      }
+    }
+
+    @keyframes expandWidth {
+      from {
+        width: 0;
+        opacity: 0;
+      }
+      to {
+        width: 100%;
+        opacity: 1;
+      }
+    }
+
     * {
       margin: 0;
       padding: 0;
@@ -80,6 +86,7 @@
       color: #fff;
       line-height: 1.6;
       overflow-x: hidden;
+      transition: background 0.3s ease;
     }
 
     .page-loader {
@@ -93,14 +100,7 @@
       justify-content: center;
       align-items: center;
       z-index: 1000;
-      animation: fadeOut 1s ease-out 1.5s forwards;
-    }
-
-    @keyframes fadeOut {
-      to {
-        opacity: 0;
-        visibility: hidden;
-      }
+      animation: fadeOut 0.6s ease-out 1.2s forwards;
     }
 
     .loader-content {
@@ -120,7 +120,7 @@
       position: relative;
       z-index: 2;
       opacity: 0;
-      animation: fadeInUp 1s ease-out 2s forwards;
+      animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 1.5s forwards;
     }
 
     header p {
@@ -160,22 +160,45 @@
       font-size: 1.2rem;
       font-weight: 600;
       border-radius: 30px;
-      transition: all 0.3s ease;
+      transition: all 0.3s cubic-bezier(0.22, 0.61, 0.36, 1);
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.2);
       opacity: 0;
       transform: translateY(20px);
+      position: relative;
+      overflow: hidden;
     }
 
-    nav.socials a:nth-child(1) { animation: fadeInUp 0.5s ease-out 2.2s forwards; }
-    nav.socials a:nth-child(2) { animation: fadeInUp 0.5s ease-out 2.4s forwards; }
-    nav.socials a:nth-child(3) { animation: fadeInUp 0.5s ease-out 2.6s forwards; }
+    nav.socials a:nth-child(1) { animation: fadeInUp 0.5s cubic-bezier(0.22, 0.61, 0.36, 1) 1.7s forwards; }
+    nav.socials a:nth-child(2) { animation: fadeInUp 0.5s cubic-bezier(0.22, 0.61, 0.36, 1) 1.9s forwards; }
+    nav.socials a:nth-child(3) { animation: fadeInUp 0.5s cubic-bezier(0.22, 0.61, 0.36, 1) 2.1s forwards; }
+
+    nav.socials a::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+      transition: 0.5s;
+    }
 
     nav.socials a:hover {
       transform: translateY(-5px);
       background: rgba(255, 204, 0, 0.2);
-      animation: glow 1.5s infinite;
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+      border-color: rgba(255, 204, 0, 0.5);
+    }
+
+    nav.socials a:hover::before {
+      left: 100%;
+    }
+
+    nav.socials a:active {
+      transform: translateY(0) scale(0.95);
+      transition: all 0.1s ease;
     }
 
     main {
@@ -193,10 +216,17 @@
       border: 1px solid rgba(255, 255, 255, 0.1);
       opacity: 0;
       transform: translateY(30px);
+      transition: all 0.4s cubic-bezier(0.22, 0.61, 0.36, 1);
     }
 
-    .about { animation: fadeInUp 1s ease-out 3.2s forwards; }
-    .requests { animation: fadeInUp 1s ease-out 3.5s forwards; }
+    .about { animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.3s forwards; }
+    .requests { animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.5s forwards; }
+
+    section:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+      border-color: rgba(255, 204, 0, 0.3);
+    }
 
     section h2 {
       font-size: 2rem;
@@ -216,6 +246,11 @@
       width: 50%;
       height: 3px;
       background: linear-gradient(to right, #ffcc00, transparent);
+      transition: width 0.4s ease;
+    }
+
+    section h2:hover::after {
+      width: 100%;
     }
 
     .about-content {
@@ -229,15 +264,16 @@
       border: 3px solid rgba(255, 255, 255, 0.3);
       border-radius: 10px;
       max-width: 200px;
-      transition: all 0.3s ease;
+      transition: all 0.4s cubic-bezier(0.22, 0.61, 0.36, 1);
       opacity: 0;
-      animation: fadeInUp 0.8s ease-out 3.4s forwards;
+      animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.4s forwards;
       loading: lazy;
     }
 
     .about img:hover {
       transform: scale(1.05) rotate(2deg);
       border-color: #ffcc00;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
     }
 
     .about-text {
@@ -255,11 +291,26 @@
       text-decoration: none;
       font-weight: 600;
       transition: all 0.3s ease;
+      position: relative;
+    }
+
+    .requests a::after {
+      content: '';
+      position: absolute;
+      bottom: -2px;
+      left: 0;
+      width: 0;
+      height: 2px;
+      background: #ffcc00;
+      transition: width 0.3s ease;
     }
 
     .requests a:hover {
-      text-decoration: underline;
       text-shadow: 0 0 10px rgba(255, 204, 0, 0.5);
+    }
+
+    .requests a:hover::after {
+      width: 100%;
     }
 
     footer {
@@ -271,7 +322,7 @@
       backdrop-filter: blur(5px);
       margin-top: 50px;
       opacity: 0;
-      animation: fadeInUp 1s ease-out 3.8s forwards;
+      animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.7s forwards;
     }
 
     @media (max-width: 768px) {
@@ -353,6 +404,18 @@
         img.onload = function() {
           console.log('Image loaded:', this.src);
         };
+      });
+      
+      // Amélioration des interactions des liens
+      const links = document.querySelectorAll('a');
+      links.forEach(link => {
+        link.addEventListener('click', function(e) {
+          // Ajout d'un effet visuel lors du clic
+          this.style.transform = 'scale(0.95)';
+          setTimeout(() => {
+            this.style.transform = '';
+          }, 100);
+        });
       });
     });
   </script>
