--- a/index.html
+++ b/index.html
@@ -6,39 +6,45 @@
   <title>z4trox</title>
   <meta name="description" content="z4trox - Creating AI-assisted art and comics. NSFW/SFW content for adults.">
   <style>
-    @keyframes rainbowBG {
+    @keyframes colorShift {
       0% {
-        background: linear-gradient(-45deg, #ff0000, #ff8000, #ffff00, #80ff00, #00ff00);
+        background: linear-gradient(135deg, #ff0000, #ff4000, #ff8000);
       }
-      10% {
-        background: linear-gradient(-45deg, #00ff00, #00ff80, #00ffff, #0080ff, #0000ff);
+      8.33% {
+        background: linear-gradient(135deg, #ff8000, #ffbf00, #ffff00);
       }
-      20% {
-        background: linear-gradient(-45deg, #0000ff, #8000ff, #ff00ff, #ff0080, #ff0000);
+      16.66% {
+        background: linear-gradient(135deg, #ffff00, #bfff00, #80ff00);
       }
-      30% {
-        background: linear-gradient(-45deg, #ff0000, #ff8000, #ffff00, #80ff00, #00ff00);
+      25% {
+        background: linear-gradient(135deg, #80ff00, #40ff00, #00ff00);
       }
-      40% {
-        background: linear-gradient(-45deg, #00ff00, #00ff80, #00ffff, #0080ff, #0000ff);
+      33.33% {
+        background: linear-gradient(135deg, #00ff00, #00ff40, #00ff80);
+      }
+      41.66% {
+        background: linear-gradient(135deg, #00ff80, #00ffbf, #00ffff);
       }
       50% {
-        background: linear-gradient(-45deg, #0000ff, #8000ff, #ff00ff, #ff0080, #ff0000);
+        background: linear-gradient(135deg, #00ffff, #00bfff, #0080ff);
       }
-      60% {
-        background: linear-gradient(-45deg, #ff0000, #ff8000, #ffff00, #80ff00, #00ff00);
+      58.33% {
+        background: linear-gradient(135deg, #0080ff, #0040ff, #0000ff);
       }
-      70% {
-        background: linear-gradient(-45deg, #00ff00, #00ff80, #00ffff, #0080ff, #0000ff);
+      66.66% {
+        background: linear-gradient(135deg, #0000ff, #4000ff, #8000ff);
       }
-      80% {
-        background: linear-gradient(-45deg, #0000ff, #8000ff, #ff00ff, #ff0080, #ff0000);
+      75% {
+        background: linear-gradient(135deg, #8000ff, #bf00ff, #ff00ff);
       }
-      90% {
-        background: linear-gradient(-45deg, #ff0000, #ff8000, #ffff00, #80ff00, #00ff00);
+      83.33% {
+        background: linear-gradient(135deg, #ff00ff, #ff00bf, #ff0080);
+      }
+      91.66% {
+        background: linear-gradient(135deg, #ff0080, #ff0040, #ff0000);
       }
       100% {
-        background: linear-gradient(-45deg, #00ff00, #00ff80, #00ffff, #0080ff, #0000ff);
+        background: linear-gradient(135deg, #ff0000, #ff4000, #ff8000);
       }
     }
 
@@ -50,18 +56,6 @@
       to {
         opacity: 1;
         transform: translateY(0);
-      }
-    }
-
-    @keyframes glow {
-      0% {
-        box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
-      }
-      50% {
-        box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
-      }
-      100% {
-        box-shadow: 0 0 5px rgba(255, 255, 255, 0.5);
       }
     }
 
@@ -93,13 +87,12 @@
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
       min-height: 100vh;
-      background: linear-gradient(-45deg, #2b0000, #3a0000, #1a0000, #4a0000);
+      background: linear-gradient(135deg, #ff0000, #ff4000, #ff8000);
       background-size: 400% 400%;
-      animation: rainbowBG 20s ease infinite;
+      animation: colorShift 30s ease infinite;
       color: #fff;
       line-height: 1.6;
       overflow-x: hidden;
-      transition: background 0.5s ease;
     }
 
     .page-loader {
@@ -108,7 +101,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(-45deg, #2b0000, #3a0000);
+      background: linear-gradient(135deg, #2b0000, #3a0000);
       display: flex;
       justify-content: center;
       align-items: center;
