--- a/index.html
+++ b/index.html
@@ -6,45 +6,21 @@
   <title>z4trox</title>
   <meta name="description" content="z4trox - Creating AI-assisted art and comics. NSFW/SFW content for adults.">
   <style>
-    @keyframes colorShift {
+    @keyframes neonPulse {
       0% {
-        background: linear-gradient(135deg, #ff0000, #ff4000, #ff8000);
-      }
-      8.33% {
-        background: linear-gradient(135deg, #ff8000, #ffbf00, #ffff00);
-      }
-      16.66% {
-        background: linear-gradient(135deg, #ffff00, #bfff00, #80ff00);
+        background: linear-gradient(135deg, #8a2be2, #9370db, #8a2be2);
       }
       25% {
-        background: linear-gradient(135deg, #80ff00, #40ff00, #00ff00);
-      }
-      33.33% {
-        background: linear-gradient(135deg, #00ff00, #00ff40, #00ff80);
-      }
-      41.66% {
-        background: linear-gradient(135deg, #00ff80, #00ffbf, #00ffff);
+        background: linear-gradient(135deg, #9370db, #da70d6, #9370db);
       }
       50% {
-        background: linear-gradient(135deg, #00ffff, #00bfff, #0080ff);
-      }
-      58.33% {
-        background: linear-gradient(135deg, #0080ff, #0040ff, #0000ff);
-      }
-      66.66% {
-        background: linear-gradient(135deg, #0000ff, #4000ff, #8000ff);
+        background: linear-gradient(135deg, #da70d6, #dda0dd, #da70d6);
       }
       75% {
-        background: linear-gradient(135deg, #8000ff, #bf00ff, #ff00ff);
-      }
-      83.33% {
-        background: linear-gradient(135deg, #ff00ff, #ff00bf, #ff0080);
-      }
-      91.66% {
-        background: linear-gradient(135deg, #ff0080, #ff0040, #ff0000);
+        background: linear-gradient(135deg, #9370db, #8a2be2, #9370db);
       }
       100% {
-        background: linear-gradient(135deg, #ff0000, #ff4000, #ff8000);
+        background: linear-gradient(135deg, #8a2be2, #9370db, #8a2be2);
       }
     }
 
@@ -87,9 +63,9 @@
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
       min-height: 100vh;
-      background: linear-gradient(135deg, #ff0000, #ff4000, #ff8000);
+      background: linear-gradient(135deg, #8a2be2, #9370db, #8a2be2);
       background-size: 400% 400%;
-      animation: colorShift 30s ease infinite;
+      animation: neonPulse 8s ease infinite;
       color: #fff;
       line-height: 1.6;
       overflow-x: hidden;
@@ -101,7 +77,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(135deg, #2b0000, #3a0000);
+      background: linear-gradient(135deg, #4b0082, #8a2be2);
       display: flex;
       justify-content: center;
       align-items: center;
