--- a/index.html
+++ b/index.html
@@ -6,24 +6,6 @@
   <title>z4trox</title>
   <meta name="description" content="z4trox - Creating AI-assisted art and comics. NSFW/SFW content for adults.">
   <style>
-    @keyframes neonPulse {
-      0% {
-        background: linear-gradient(135deg, #8a2be2, #9370db, #8a2be2);
-      }
-      25% {
-        background: linear-gradient(135deg, #9370db, #da70d6, #9370db);
-      }
-      50% {
-        background: linear-gradient(135deg, #da70d6, #dda0dd, #da70d6);
-      }
-      75% {
-        background: linear-gradient(135deg, #9370db, #8a2be2, #9370db);
-      }
-      100% {
-        background: linear-gradient(135deg, #8a2be2, #9370db, #8a2be2);
-      }
-    }
-
     @keyframes fadeInUp {
       from {
         opacity: 0;
@@ -63,9 +45,7 @@
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
       min-height: 100vh;
-      background: linear-gradient(135deg, #8a2be2, #9370db, #8a2be2);
-      background-size: 400% 400%;
-      animation: neonPulse 8s ease infinite;
+      background: #000000;
       color: #fff;
       line-height: 1.6;
       overflow-x: hidden;
@@ -77,7 +57,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(135deg, #4b0082, #8a2be2);
+      background: #000000;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -191,7 +171,7 @@
 
     section {
       margin-bottom: 60px;
-      background: rgba(0, 0, 0, 0.2);
+      background: rgba(30, 30, 30, 0.8);
       backdrop-filter: blur(10px);
       border-radius: 15px;
       padding: 30px;
@@ -206,7 +186,7 @@
 
     section:hover {
       transform: translateY(-5px);
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.5);
       border-color: rgba(255, 204, 0, 0.3);
     }
 
@@ -255,7 +235,7 @@
     .about img:hover {
       transform: scale(1.05) rotate(2deg);
       border-color: #ffcc00;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.6);
     }
 
     .about-text {
@@ -300,7 +280,7 @@
       padding: 30px;
       font-size: 1rem;
       opacity: 0.8;
-      background: rgba(0, 0, 0, 0.3);
+      background: rgba(20, 20, 20, 0.9);
       backdrop-filter: blur(5px);
       margin-top: 50px;
       opacity: 0;
@@ -380,7 +360,7 @@
       images.forEach(img => {
         img.onerror = function() {
           console.log('Image failed to load:', this.src);
-          this.style.backgroundColor = '#4a0000';
+          this.style.backgroundColor = '#333';
         };
         
         img.onload = function() {
