--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
       <div class="about-content">
         <img src="akzh21.jpg" alt="Illustration of z4trox" loading="lazy">
         <div class="about-text">
-          <p>I create AI-assisted images and comics. Content may be NSFW/SFW — strictly for adults only.</p>
+          <p>I create AI-assisted images. Content may be NSFW/SFW — strictly for adults only.</p>
         </div>
       </div>
     </section>
