--- a/index.html
+++ b/index.html
@@ -274,6 +274,7 @@
       opacity: 0;
       animation: scaleIn 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.7s forwards;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+      pointer-events: none;
     }
 
     .about img:hover {
