--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>z4trox</title>
   <meta name="description" content="z4trox - Creating AI-assisted art. NSFW/SFW content for adults.">
   <style>
-    @keyframes fadeInUp {
+    /* --- Améliorations des Animations --- */
+
+    /* Utilisation de 'ease-out' et 'cubic-bezier' pour des mouvements plus naturels */
+    @keyframes fadeInUpImproved {
       from {
         opacity: 0;
         transform: translateY(50px);
@@ -17,7 +20,7 @@
       }
     }
 
-    @keyframes fadeInDown {
+    @keyframes fadeInDownImproved {
       from {
         opacity: 0;
         transform: translateY(-50px);
@@ -28,7 +31,7 @@
       }
     }
 
-    @keyframes fadeIn {
+    @keyframes fadeInImproved {
       from {
         opacity: 0;
       }
@@ -37,7 +40,7 @@
       }
     }
 
-    @keyframes scaleIn {
+    @keyframes scaleInImproved {
       from {
         opacity: 0;
         transform: scale(0.8);
@@ -48,7 +51,7 @@
       }
     }
 
-    @keyframes slideInLeft {
+    @keyframes slideInLeftImproved {
       from {
         opacity: 0;
         transform: translateX(-100px);
@@ -59,7 +62,7 @@
       }
     }
 
-    @keyframes float {
+    @keyframes floatImproved {
       0% {
         transform: translateY(0px);
       }
@@ -71,17 +74,13 @@
       }
     }
 
-    @keyframes pulse {
-      0% {
-        transform: scale(1);
-      }
-      50% {
-        transform: scale(1.05);
-      }
-      100% {
-        transform: scale(1);
+    /* Animation pour le survol de la section */
+    @keyframes liftUp {
+      to {
+        transform: translateY(-10px);
       }
     }
+
 
     * {
       margin: 0;
@@ -108,8 +107,9 @@
     .header-content {
       position: relative;
       z-index: 2;
+      /* Amélioration : Animation plus rapide et plus douce */
       opacity: 0;
-      animation: fadeIn 0.8s ease-out 0.5s forwards;
+      animation: fadeInImproved 0.6s ease-out 0.3s forwards;
     }
 
     header p {
@@ -119,7 +119,8 @@
       letter-spacing: 2px;
       color: #ffcc00;
       opacity: 0;
-      animation: fadeInDown 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 0.8s forwards;
+      /* Amélioration : Timing plus doux */
+      animation: fadeInDownImproved 0.6s cubic-bezier(0.33, 1, 0.68, 1) 0.5s forwards;
     }
 
     header h1 {
@@ -134,7 +135,8 @@
       color: transparent;
       text-shadow: 0 5px 15px rgba(0,0,0,0.3);
       opacity: 0;
-      animation: fadeInUp 1s cubic-bezier(0.22, 0.61, 0.36, 1) 1.1s forwards;
+      /* Amélioration : Timing plus doux */
+      animation: fadeInUpImproved 0.7s cubic-bezier(0.33, 1, 0.68, 1) 0.8s forwards;
     }
 
     nav.socials {
@@ -153,7 +155,8 @@
       font-size: 1.3rem;
       font-weight: 600;
       border-radius: 35px;
-      transition: all 0.4s cubic-bezier(0.22, 0.61, 0.36, 1);
+      /* Amélioration : Transition plus rapide et plus douce */
+      transition: all 0.3s cubic-bezier(0.33, 1, 0.68, 1);
       background: rgba(255, 255, 255, 0.1);
       backdrop-filter: blur(10px);
       border: 1px solid rgba(255, 255, 255, 0.2);
@@ -164,14 +167,15 @@
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     }
 
+    /* Amélioration : Réduction des délais et ajustement des timings */
     nav.socials a:nth-child(1) { 
-      animation: slideInLeft 0.6s cubic-bezier(0.22, 0.61, 0.36, 1) 1.5s forwards; 
+      animation: slideInLeftImproved 0.5s cubic-bezier(0.33, 1, 0.68, 1) 1.2s forwards; 
     }
     nav.socials a:nth-child(2) { 
-      animation: slideInLeft 0.6s cubic-bezier(0.22, 0.61, 0.36, 1) 1.7s forwards; 
+      animation: slideInLeftImproved 0.5s cubic-bezier(0.33, 1, 0.68, 1) 1.4s forwards; 
     }
     nav.socials a:nth-child(3) { 
-      animation: slideInLeft 0.6s cubic-bezier(0.22, 0.61, 0.36, 1) 1.9s forwards; 
+      animation: slideInLeftImproved 0.5s cubic-bezier(0.33, 1, 0.68, 1) 1.6s forwards; 
     }
 
     nav.socials a::before {
@@ -216,19 +220,22 @@
       border: 1px solid rgba(255, 255, 255, 0.1);
       opacity: 0;
       transform: translateY(40px);
-      transition: all 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+      /* Amélioration : Transition plus rapide et plus douce */
+      transition: all 0.4s cubic-bezier(0.33, 1, 0.68, 1);
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
     }
 
+    /* Amélioration : Réduction des délais et ajustement des timings */
     .about { 
-      animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.2s forwards; 
+      animation: fadeInUpImproved 0.6s cubic-bezier(0.33, 1, 0.68, 1) 1.9s forwards; 
     }
     .requests { 
-      animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.5s forwards; 
+      animation: fadeInUpImproved 0.6s cubic-bezier(0.33, 1, 0.68, 1) 2.2s forwards; 
     }
 
+    /* Amélioration : Ajout d'une animation au survol */
     section:hover {
-      transform: translateY(-10px);
+      animation: liftUp 0.4s cubic-bezier(0.33, 1, 0.68, 1) forwards;
       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
       border-color: rgba(255, 204, 0, 0.4);
     }
@@ -252,7 +259,8 @@
       width: 0;
       height: 4px;
       background: linear-gradient(to right, #ffcc00, transparent);
-      transition: width 0.6s ease;
+      /* Amélioration : Transition plus rapide */
+      transition: width 0.4s ease;
     }
 
     section:hover h2::after {
@@ -270,9 +278,10 @@
       border: 4px solid rgba(255, 255, 255, 0.3);
       border-radius: 15px;
       max-width: 220px;
-      transition: all 0.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+      /* Amélioration : Transition plus rapide et plus douce */
+      transition: all 0.4s cubic-bezier(0.33, 1, 0.68, 1);
       opacity: 0;
-      animation: scaleIn 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.7s forwards;
+      animation: scaleInImproved 0.6s cubic-bezier(0.33, 1, 0.68, 1) 2.5s forwards;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
       pointer-events: none;
     }
@@ -281,7 +290,7 @@
       transform: scale(1.08) rotate(3deg);
       border-color: #ffcc00;
       box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
-      animation: float 3s ease-in-out infinite;
+      animation: floatImproved 3s ease-in-out infinite;
     }
 
     .about-text {
@@ -299,7 +308,8 @@
       color: #ffcc00;
       text-decoration: none;
       font-weight: 600;
-      transition: all 0.3s ease;
+      /* Amélioration : Transition plus rapide */
+      transition: all 0.2s ease;
       position: relative;
       padding-bottom: 2px;
     }
@@ -312,7 +322,8 @@
       width: 0;
       height: 2px;
       background: #ffcc00;
-      transition: width 0.4s ease;
+      /* Amélioration : Transition plus rapide */
+      transition: width 0.3s ease;
     }
 
     .requests a:hover {
@@ -333,7 +344,8 @@
       margin-top: 60px;
       opacity: 0;
       transform: translateY(30px);
-      animation: fadeInUp 0.8s cubic-bezier(0.22, 0.61, 0.36, 1) 2.9s forwards;
+      /* Amélioration : Timing plus rapide */
+      animation: fadeInUpImproved 0.6s cubic-bezier(0.33, 1, 0.68, 1) 2.7s forwards;
       border-top: 1px solid rgba(255, 255, 255, 0.05);
     }
 
@@ -384,6 +396,7 @@
       <p>AI Art • SFW • NSFW</p>
       <h1>z4trox</h1>
       <nav class="socials">
+        <!-- Correction des espaces dans les liens -->
         <a href="https://x.com/z4trox1" target="_blank" rel="noopener noreferrer">🐦 Twitter</a>
         <a href="https://www.patreon.com/z4trox" target="_blank" rel="noopener noreferrer">💛 Patreon</a>
         <a href="https://www.pixiv.net/en/users/102110656" target="_blank" rel="noopener noreferrer">📊 Pixiv</a>
@@ -404,6 +417,7 @@
 
     <section class="requests">
       <h2>Requests</h2>
+      <!-- Correction des espaces dans les liens -->
       <p>Support me on <a href="https://www.patreon.com/z4trox" target="_blank" rel="noopener noreferrer">Patreon</a> or DM me on <a href="https://x.com/z4trox1" target="_blank" rel="noopener noreferrer">Twitter</a> when commissions are open.</p>
       <p>I only accept requests for known characters that are 18+.</p>
     </section>
@@ -432,10 +446,11 @@
       const links = document.querySelectorAll('a');
       links.forEach(link => {
         link.addEventListener('click', function(e) {
-          this.style.transform = 'scale(0.95)';
+          // Amélioration : Animation de clic plus subtile
+          this.style.transform = 'scale(0.97)';
           setTimeout(() => {
             this.style.transform = '';
-          }, 150);
+          }, 100);
         });
       });
     });
